Agregando unos pequeños detalles

--- a/nosotros.html
+++ b/nosotros.html
@@ -7,6 +7,11 @@
     <title>Sobre nosotros</title>
 </head>
 <body>
-    
+    <header>
+        <h2>Sobre nosotros</h2>
+    </header>
+    <main>
+        Una pequeña historia sobre nosotros
+    </main>
 </body>
 </html>
