--- a/productos.html
+++ b/productos.html
@@ -7,7 +7,14 @@
     <title>Productos</title>
 </head>
 <body>
-    
+    <main>
+        <header>
+            <h2>Productos</h2>
+        </header>
+        <section>
+            <div id="product"></div>
+        </section>
+    </main>
     <script src="js/products.js"></script>
 </body>
 </html>
