Agregando navbar a todas las vistas

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eccomerce</title>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pag-principal.css">
 </head>
 <body>
     <header>
@@ -24,7 +25,7 @@
         </div>
     </header>
     <main>
-        
+        <h2>TWICE</h2>
     </main>
 </body>
 </html>
