--- a/productos.html
+++ b/productos.html
@@ -5,14 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pag-productos.css">
 </head>
 <body>
+    <header>
+        <div class="header">
+            <div class="logo">
+                <img src="assets/logo.png" alt="logo">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
+    </header>
     <main>
-        <header>
-            <h2>Productos</h2>
-        </header>
+        <h2>Nuestros productos</h2>
         <section>
-            <div id="product"></div>
+            <div id="products"></div>
         </section>
     </main>
     <script src="js/products.js"></script>
