--- a/nosotros.html
+++ b/nosotros.html
@@ -5,13 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sobre nosotros</title>
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/pag-nosotros.css">
 </head>
 <body>
     <header>
-        <h2>Sobre nosotros</h2>
+        <div class="header">
+            <div class="logo">
+                <img src="assets/logo.png" alt="logo">
+            </div>
+            <div class="menu">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="nosotros.html">Nosotros</a></li>
+                    <li><a href="productos.html">Productos</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
+                </ul>
+            </div>
+        </div>
     </header>
     <main>
-        Una pequeña historia sobre nosotros
+        <h2>Nosotros</h2>
+        <p>Una pequeña historia sobre nosotros</p>
     </main>
 </body>
 </html>
