Agregando la llamada a la api

--- a/productos.html
+++ b/productos.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/pag-productos.css">
 </head>
-<body>
+<body style="background-image: url('/assets/background.png');">
     <header>
         <div class="header">
             <div class="logo">
