--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
 </head>
-<body class="bg-info">
+<body style="background-image: url('/assets/background.png');">
     <header>
         <div class="header pb-1">
             <div class="logo">
@@ -27,11 +27,11 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="col-12 text-center pt-5 bg-info">
+                <div class="col-12 text-center pt-5">
                     <h2>Contacto</h2>
                     <p>Contactate con nosotros para recibir mas informacion sobre nuestros productos.</p>
                 </div>
-                <div class="bg-info p-5 vh-50">
+                <div class=" p-5 vh-50">
                     <form action="POST" class="px-5">
                         <div class="mb-3">
                             <label for="nombre" class="form-label">Nombre</label>
