Agregando mejoras al proyecto

--- a/contacto.html
+++ b/contacto.html
@@ -28,8 +28,8 @@
         <div class="container-fluid">
             <div class="row">
                 <div class="col-12 text-center pt-5">
-                    <h2>Contacto</h2>
-                    <p>Contactate con nosotros para recibir mas informacion sobre nuestros productos.</p>
+                    <h2 class="fs-1">Contacto</h2>
+                    <p class="fs-5">Contactate con nosotros para recibir mas informacion sobre nuestros productos.</p>
                 </div>
                 <div class=" p-5 vh-50">
                     <form action="POST" class="px-5">
