--- a/nosotros.html
+++ b/nosotros.html
@@ -27,8 +27,7 @@
     <main>
         <h2>Nosotros</h2>
         <p>Una pequeña historia sobre nosotros</p>
-        <hr>
-        <section>
+        <section class="nosotros">
             <h3>¿Quiénes somos?</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, iste doloribus. Reprehenderit ad itaque architecto perferendis quaerat sit similique non quos, culpa nisi repellendus ipsa deleniti ducimus? Itaque, laborum ea!</p>
         </section>
